--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "axios": "^1.7.7",
     "firebase": "^11.0.2",
     "framer-motion": "^11.11.11",
+    "lottie-react": "^2.4.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
