--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "redux-persist": "^6.0.0",
+    "resend": "^4.0.1",
     "slick-carousel": "^1.8.1",
     "stripe": "^17.4.0",
     "zod": "^3.23.8"
