--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.0.2",
     "framer-motion": "^11.11.11",
     "lottie-react": "^2.4.0",
+    "nanoid": "^5.0.9",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
@@ -26,6 +27,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
+    "react-to-print": "^3.0.4",
     "redux-persist": "^6.0.0",
     "resend": "^4.0.1",
     "slick-carousel": "^1.8.1",
