--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-to-print": "^3.0.4",
     "redux-persist": "^6.0.0",
     "resend": "^4.0.1",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "stripe": "^17.4.0",
     "zod": "^3.23.8"
